Make navbar sticky/fixed at top - change overflow-x to clip

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,7 @@
 
 html,
 body {
-    overflow-x: hidden;
+    overflow-x: clip;
 }
 
 body {
